feat: 支持一些业务特性，增加 task_name维度查询，以及批任务状态
