# internal/api/goosefs.go
@@ -10,53 +10,58 @@ import (
 )
 
 // @summary execute for goosefs cli
-// @description 执行内置的 goosefs 命令，包括 distribute_load/load_metadata，返回 task_id，可以通过 task_id 获取执行状态或者输出
+// @description 执行内置的 goosefs 命令，包括 distribute_load/load_metadata，返回 task_id，可以通过 task_id 获取执行状态或者输出;注意GooseFSList是等待执行的不是挂起的任务，且只支持 1 个 path查询。
 // @Tags GooseFS
 // @Accept json
 // @Produce json
 // @Param req body models.GooseFSRequest true "DistrubuteLoad"
-// @Success 200 {string} string
+// @Success 200 {object} models.TaskStatus
 // @Router /api/v1/gfs [post]
 func GoosefsExecute(c *gin.Context) {
 	var req models.GooseFSRequest
 
 	if err := c.ShouldBindJSON(&req); err != nil {
-		c.String(http.StatusBadRequest, err.Error())
+		c.JSON(http.StatusBadRequest, err.Error())
 		return
 	}
 
-	switch *req.Action {
+	switch req.Action {
 	case models.GooseFSDistributeLoad:
 		if req.Path == nil {
-			c.String(http.StatusBadRequest, "path is required")
+			c.JSON(http.StatusBadRequest, "path is required")
 			return
 		}
-		taskID, err := executor.DistrubuteLoad(*req.Path)
+		taskID, err := executor.DistrubuteLoad(req)
 		if err != nil {
-			c.String(http.StatusInternalServerError, err.Error())
+			c.JSON(http.StatusInternalServerError, err.Error())
 			return
 		}
-		c.String(http.StatusOK, taskID)
+		c.JSON(http.StatusOK, taskID)
 	case models.GooseFSLoadMetadata:
 		if req.Path == nil {
 			c.String(http.StatusBadRequest, "path is required")
 			return
 		}
-		taskID, err := executor.LoadMetadata(*req.Path)
+		taskID, err := executor.LoadMetadata(req)
 		if err != nil {
 			c.String(http.StatusInternalServerError, err.Error())
 			return
 		}
-		c.String(http.StatusOK, taskID)
+		c.JSON(http.StatusOK, taskID)
 	case models.GooseFSList:
-		if req.Path == nil {
-			c.String(http.StatusBadRequest, "path is required")
-			return
-		}
+
 		if req.TimeOut == nil {
 			req.TimeOut = tea.Int(30) // 默认 30 秒
 		}
-		output, err := executor.List(*req.Path, *req.TimeOut)
+		if len(req.Path) != 1 {
+			c.String(http.StatusBadRequest, "list only support one path, cause this func is not running in background")
+			return
+		}
+		if req.Path == nil || *req.Path[0] == "" {
+			c.String(http.StatusBadRequest, "path is required")
+			return
+		}
+		output, err := executor.List(*req.Path[0], *req.TimeOut)
 		if err != nil {
 			c.String(http.StatusInternalServerError, err.Error())
 			return
@@ -64,7 +69,7 @@ func GoosefsExecute(c *gin.Context) {
 		c.String(http.StatusOK, output)
 
 	default:
-		c.String(http.StatusBadRequest, "action not found, only support 0: GooseFSDistributeLoad 1: GooseFSLoadMetadata 2: GooseFSList")
+		c.String(http.StatusBadRequest, "action not found, only support 0: GooseFSDistributeLoad 1: GooseFSLoadMetadata 2: GooseFSList 3: GooseFSReport")
 		return
 	}
 }
